# angelo

./: CMakeLists.txt  README.md
misc/: header_template.h  macos_app_CMakeLists.txt  naming_convention.h  source_template.c
src/: angelo.h  lib.c
src/app/: app.h  app_macos.m  app_unix.c  app_unix.h  app_win32.c
src/debug/: debug.c  debug.h
src/element/: element.h
src/misc/wayland/: kde-server-decoration.c  kde-server-decoration.h  xdg-shell-client-header.h
src/render/: render.h
src/util/: util.c  util.h
src/win/: win.h  win_macos.m  win_unix.c  win_unix.h  win_win32.c
test/: main.c  main.py
